[gd_scene load_steps=5 format=3 uid="uid://cwv6evin4v2gm"]

[ext_resource type="Script" uid="uid://b53alle445kvc" path="res://scripts/player/vrHand.gd" id="1_87nh3"]
[ext_resource type="PackedScene" path="res://scenes/itemHolder.tscn" id="2_wtctk"]

[sub_resource type="TorusMesh" id="TorusMesh_3n2yb"]
inner_radius = 0.052
outer_radius = 0.12

[sub_resource type="CylinderMesh" id="CylinderMesh_dtbbn"]
top_radius = 0.0
bottom_radius = 0.03

[node name="rightHand" type="XRController3D"]
tracker = &"right_hand"
script = ExtResource("1_87nh3")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
mesh = SubResource("TorusMesh_3n2yb")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, -1.07379)
mesh = SubResource("CylinderMesh_dtbbn")

[node name="grappleCast" type="RayCast3D" parent="."]
target_position = Vector3(0, 0, -30)
collision_mask = 2

[node name="itemHolder" parent="." node_paths=PackedStringArray("xrController") instance=ExtResource("2_wtctk")]
isVr = true
xrController = NodePath("..")

[connection signal="button_pressed" from="." to="." method="_on_button_pressed"]
[connection signal="button_released" from="." to="." method="_on_button_released"]
